# kublet-apps

./: .gitignore  KUBLET.md  ideas.md  pyproject.toml
apps/aquarium/: README.md
apps/aquarium/src/: main.cpp
apps/astro/: README.md  platformio.ini
apps/astro/assets/: apod_page.html  http_fixtures.json
apps/astro/src/: main.cpp
apps/badgers/: README.md  manifest.yaml  platformio.ini
apps/badgers/src/: GIFDraw.cpp  GIFDraw.h  badgers.h  globals.h  main.cpp
apps/bored/: platformio.ini
apps/boredd/: platformio.ini
apps/claude-usage/: README.md  manifest.yaml
apps/claude-usage/assets/: http_fixtures.json  preferences.json  usage.json
apps/claude-usage/src/: main.cpp
apps/clock/: README.md  platformio.ini
apps/clock/src/: main.cpp
apps/color/: README.md  manifest.yaml
apps/color/src/: main.cpp
apps/dvd/: README.md
apps/dvd/src/: main.cpp
apps/hn/: README.md  platformio.ini
apps/hn/assets/: http_fixtures.json  item_1.json  item_10.json  item_2.json  item_3.json  item_4.json  item_5.json  item_6.json  item_7.json  item_8.json  item_9.json  topstories.json
apps/hn/src/: main.cpp
apps/lava/: README.md
apps/lava/src/: main.cpp
apps/life/: README.md
apps/life/src/: main.cpp
apps/matrix/: README.md
apps/matrix/src/: main.cpp
apps/maze/: README.md
apps/maze/src/: main.cpp
apps/music/: README.md  platformio.ini
apps/music/assets/: http_fixtures.json  metadata.json
apps/music/src/: main.cpp
apps/notice/: README.md
apps/notice/assets/: notifications.json
apps/notice/src/: main.cpp
apps/pomodoro/: README.md  platformio.ini
apps/pomodoro/src/: main.cpp
apps/snake/: README.md
apps/snake/src/: main.cpp
apps/speed/: README.md  platformio.ini
apps/speed/assets/: http_fixtures.json
apps/speed/src/: main.cpp
apps/stock/: README.md  manifest.yaml  platformio.ini
apps/stock/assets/: AAPL.json  AMZN.json  BTC-USD.json  GOOG.json  NVDA.json  VGT.json  VIX.json  VOO.json  VTI.json  VXUS.json  http_fixtures.json
apps/stock/src/: main.cpp
apps/this-is-fine/: README.md  platformio.ini
apps/this-is-fine/src/: GIFDraw.cpp  globals.h  main.cpp  this_is_fine.h
apps/time/: README.md
apps/time/src/: main.cpp
apps/weather/: README.md  platformio.ini
apps/weather/assets/: forecast_1.json  forecast_2.json  forecast_3.json  http_fixtures.json
apps/weather/src/: main.cpp
apps/yule/: README.md
apps/yule/src/: GIFDraw.h  main.cpp  yule.h
firmware/: README.md
lib/GIFDraw/: GIFDraw.cpp  GIFDraw.h  library.json
lib/KGFX/: ILI9341_t3.h  README.md  TFT_eSPI_ext.h  font_Arial.h  kgfx.cpp  kgfx.h  library.json
lib/OTAServer/: library.json  otaserver.cpp  otaserver.h
server/: README.md  fetch_claude_usage.sh  run  server.py
server/src/: music.py  server.py  shared.py  usage.py
server/src/apps/: __init__.py
server/src/apps/music/: __init__.py  tracks.py
server/src/apps/notice/: __init__.py  emoji.py  hub.py  macos.py
server/src/apps/usage/: __init__.py  claude.py
tools/: KUBLET.md  README.md  dev  emulate
tools/src/emulate/: CMakeLists.txt  main_wrapper.cpp
tools/src/emulate/mock/: Arduino.h  Arduino_impl.cpp  ESPmDNS.h  HTTPClient.h  ILI9341_t3.h  Preferences.h  SPI.h  TFT_eSPI.h  TFT_eSPI_impl.cpp  TJpg_Decoder.h  TJpg_Decoder_impl.cpp  Update.h  WebServer.h  WebServer_impl.cpp  WiFi.h  WiFiClientSecure.h  otaserver.h
tools/src/kublet_dev/: build.py  cli.py  config.py  devices.py  flash.py  network.py
tools/tests/: conftest.py  test_build.py  test_config.py  test_devices.py  test_emulate.py
tools/usage-server/: fetch_usage.sh  server.py
